<resources>
    <string name="app_name">ArticlesApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="published_date">Published date :</string>
    <string name="copy_right">Copy Right :</string>
    <string name="source">Source :</string>
    <string name="byline">Byline :</string>
    <string name="caption">Caption :</string>
    <string name="waiting">Waiting ...</string>
</resources>